# hack-ls

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  test.sh
docs/: architecture.mmd  architecture.txt
src/: main.cpp
src/core/: LanguageServer.cpp  LanguageServer.hpp
src/core/handlers/: DocumentHandler.hpp  DocumentsHandler.hpp  IServerInitState.hpp  MessageHandler.cpp  MessageHandler.hpp  MessagesHandler.cpp  MessagesHandler.hpp
src/core/interfaces/: IMessage.hpp  IRespond.hpp  IServerState.hpp
src/core/structures/: TextDocument.cpp  TextDocument.hpp
src/core/transport/: MessageIO.hpp
src/hack/: CompletionEngine.cpp  CompletionEngine.hpp  DiagnosticsEngine.cpp  DiagnosticsEngine.hpp  HackAssembler.hpp  HackManager.hpp  HoverEngine.hpp
src/lib/: utf16_to_utf8.cpp  utf16_to_utf8.hpp
src/lsp/: errors.hpp  messages.hpp  params.hpp  protocol.hpp  responses.hpp  types.hpp
src/protocol/: messages.hpp  responses.hpp
src/util/: logging.hpp
tests/: Add.asm  Add2.asm  Max.asm  Max2.asm
tests/requests/: did.txt  init.txt
